[package]
name = "rustling_dark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustling_dark"
path = "src/main.rs"

[lib]
name = "rustling_dark"
path = "src/lib.rs"

[[test]]
name = "mycrate-test"
path = "exercises/analysis_hook.rs"

[dependencies]
argh = "0.1"
toml = "0.7.2"
serde = { version = "1.0", default-features = true, features = ["derive"] }
option-ext = "0.2.0"